--- a/DwarfFortress.html
+++ b/DwarfFortress.html
@@ -2176,7 +2176,7 @@ function SpawnZombie(){
 
 
 TODO:
-Destroy stuff, circumvent the deadlock and 3d like dwarf Fortress
+Destroy stuff, circumvent the erin deadlock and 3d like dwarf Fortress
 remove the ability to go side to side and instead go all in on down into mines and up to have elevated buildings 
 add ways of upgrading the world itself with Research
 by researching things using materials you unlock the ability to build new things that attract NPCs, animals 
